Remove button outline from summary menus on mobile and fix text display on mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -2033,10 +2033,11 @@ file. These definitions will be defined mobile first.
 /* summary-menu */
 .summary-menu--nontext-section {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     margin: auto;
-    transform: translate(-50%, -50%);
 }
 
 .summary-menu--fs-polyfill {
@@ -2086,6 +2087,7 @@ file. These definitions will be defined mobile first.
 .summary-menu__li {
     position: absolute;
     box-sizing: border-box;
+    outline: none;
 }
 
 .summary-menu__item-graphic {
@@ -2173,19 +2175,22 @@ file. These definitions will be defined mobile first.
     left: 6%;
 }
 
+.book-section-comparison-button-container--summary,
+.book-section-comparison-slider-fullscreen-container--summary,
+.book-section-video-player--summary {
+    display: none;
+}
+
 @media (min-width:900px) {
     .summary-menu--nontext-section {
         position: relative;
-        top: initial;
-        left: initial;
         width: 100%;
         height: 90%;
-        transform: initial;
     }
 
-    .book-section-comparison-button-container--summary,
-    .book-section-comparison-slider-fullscreen-container--summary,
-    .book-section-video-player--summary {
-        display: none;
+    .summary-menu__li {
+        position: absolute;
+        box-sizing: border-box;
+        outline: initial;
     }
 }
